--- a/index.html
+++ b/index.html
@@ -2,24 +2,39 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<meta name="viewport"
+      content="width=device-width,
+               height=device-height,
+               initial-scale=1.0,
+               maximum-scale=1.0,
+               user-scalable=no,
+               viewport-fit=cover">
+
 <title>Space Shooter</title>
 
 <link rel="manifest" href="manifest.json">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Space Shooter">
-<link rel="apple-touch-icon" href="icon.png">
+
+<link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+<link rel="icon" type="image/png" href="icon.png">
 
 <style>
 html, body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100vh;
   background: black;
   overflow: hidden;
   touch-action: none;
   font-family: sans-serif;
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
 }
+
 canvas {
   display: block;
   margin: 0 auto;
@@ -58,6 +73,10 @@ const PAUSE = 3;
 const GAME_OVER = 4;
 let state = MENU;
 
+// ===== ASSETS =====
+const playerImg = new Image(); playerImg.src = "player.png";
+const enemyImg  = new Image(); enemyImg.src  = "enemy.png";
+
 // ===== AUDIO =====
 const musicList = [
   new Audio("music1.mp3"),
@@ -70,99 +89,218 @@ let sfxVolume = 0.4;
 
 musicList.forEach(m => { m.loop = true; m.volume = musicVolume; });
 
-const laserSound = new Audio("laser.wav");
-const gameOverSound = new Audio("gameover.wav");
-const recordSound = new Audio("record.wav");
+const laserSound   = new Audio("laser.wav");
+const gameOverSound= new Audio("gameover.wav");
+const recordSound  = new Audio("record.wav");
+
+function updateVolumes() {
+  musicList.forEach(m => m.volume = musicVolume);
+  laserSound.volume = sfxVolume;
+  gameOverSound.volume = sfxVolume;
+  recordSound.volume = sfxVolume;
+}
+updateVolumes();
+
+// ===== iOS AUDIO UNLOCK =====
+let audioUnlocked = false;
+function unlockAudio() {
+  if (audioUnlocked) return;
+  audioUnlocked = true;
+  [...musicList, laserSound, gameOverSound, recordSound].forEach(a=>{
+    a.play().then(()=>a.pause()).catch(()=>{});
+    a.currentTime = 0;
+  });
+}
 
 // ===== STORAGE =====
 let record = Number(localStorage.getItem("record")) || 0;
 
-// ===== INPUT =====
-let touchX = null;
+// ===== PLAYER =====
+const player = { x:0, y:0, w:48, h:48 };
 
-canvas.addEventListener("touchstart", e => {
-  const r = canvas.getBoundingClientRect();
-  const y = e.touches[0].clientY - r.top;
-
-  if (state === MENU) {
-    // START
-    if (y > canvas.height * 0.52 && y < canvas.height * 0.60) {
-      startGame();
-    }
-    // SETTINGS
-    else if (y > canvas.height * 0.62 && y < canvas.height * 0.70) {
-      state = SETTINGS;
-    }
-  }
-  else if (state === SETTINGS) {
-    if (y > canvas.height * 0.80) state = MENU;
-  }
-  else if (state === GAME_OVER) {
-    state = MENU;
-  }
-});
-
-// ===== START GAME =====
-function startGame() {
-  state = GAME;
-  musicList.forEach(m => m.pause());
-  musicList[musicIndex].currentTime = 0;
-  musicList[musicIndex].play();
-}
+// ===== GAME =====
+let bullets = [];
+let enemies = [];
+let score = 0;
+let lastShot = 0;
 
 // ===== STARS =====
-const stars = Array.from({ length: 120 }, () => ({
+const stars = Array.from({ length: 300 }, () => ({
   x: Math.random(),
   y: Math.random(),
   s: Math.random() * 2 + 1
 }));
 
-function drawStars() {
-  ctx.fillStyle = "white";
-  for (let s of stars) {
-    s.y += s.s / 300;
-    if (s.y > 1) s.y = 0;
-    ctx.fillRect(s.x * canvas.width, s.y * canvas.height, s.s, s.s);
+// ===== INPUT =====
+let touchX = null;
+
+canvas.addEventListener("touchstart", e => {
+  unlockAudio();
+  const r = canvas.getBoundingClientRect();
+  const x = e.touches[0].clientX - r.left;
+  const y = e.touches[0].clientY - r.top;
+  touchX = x;
+
+  if (state === GAME && x > canvas.width - 50 && y < 50) {
+    state = PAUSE;
+    musicList[musicIndex].pause();
+    return;
   }
+
+  if (state === MENU) {
+    if (y > canvas.height*0.45 && y < canvas.height*0.55) startGame();
+    else if (y > canvas.height*0.6 && y < canvas.height*0.7) state = SETTINGS;
+  }
+  else if (state === SETTINGS) {
+    if (y > canvas.height*0.35 && y < canvas.height*0.42) musicVolume=Math.max(0,musicVolume-0.1);
+    else if (y > canvas.height*0.42 && y < canvas.height*0.49) musicVolume=Math.min(1,musicVolume+0.1);
+    else if (y > canvas.height*0.49 && y < canvas.height*0.56) sfxVolume=Math.max(0,sfxVolume-0.1);
+    else if (y > canvas.height*0.56 && y < canvas.height*0.63) sfxVolume=Math.min(1,sfxVolume+0.1);
+    else if (y > canvas.height*0.63 && y < canvas.height*0.7) {
+      musicList.forEach(m=>m.pause());
+      musicIndex=(musicIndex+1)%musicList.length;
+      musicList[musicIndex].play();
+    }
+    else if (y > canvas.height*0.78) state = MENU;
+    updateVolumes();
+  }
+  else if (state === PAUSE) {
+    state = GAME;
+    musicList[musicIndex].play();
+  }
+  else if (state === GAME_OVER) state = MENU;
+});
+
+canvas.addEventListener("touchmove", e => {
+  const r = canvas.getBoundingClientRect();
+  touchX = e.touches[0].clientX - r.left;
+});
+canvas.addEventListener("touchend", ()=>touchX=null);
+
+// ===== START GAME =====
+function startGame() {
+  player.x = canvas.width/2 - player.w/2;
+  player.y = canvas.height - player.h - 20;
+  bullets=[]; enemies=[]; score=0; lastShot=0;
+  state = GAME;
+  musicList.forEach(m=>m.pause());
+  musicList[musicIndex].currentTime=0;
+  musicList[musicIndex].play();
 }
 
-function center(text, y, size = 24) {
-  ctx.fillStyle = "white";
-  ctx.font = `${size}px sans-serif`;
-  ctx.textAlign = "center";
-  ctx.fillText(text, canvas.width / 2, y);
+// ===== DRAW HELPERS =====
+function drawStars() {
+  ctx.fillStyle="white";
+  for (let s of stars) {
+    s.y += s.s / 600; // ⭐ МЕДЛЕННЕЕ ФОН
+    if (s.y > 1) s.y = 0;
+    ctx.fillRect(s.x*canvas.width, s.y*canvas.height, s.s, s.s);
+  }
+}
+function center(t,y,s=24){
+  ctx.fillStyle="white";
+  ctx.font=`${s}px sans-serif`;
+  ctx.textAlign="center";
+  ctx.fillText(t,canvas.width/2,y);
 }
 
 // ===== UPDATE =====
 function update() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
   drawStars();
 
   if (state === MENU) {
-    center("SPACE SHOOTER", canvas.height * 0.38, 44); // чуть больше
-    center("START", canvas.height * 0.56, 22);
-    center("SETTINGS", canvas.height * 0.66, 22);
-    center("RECORD: " + record, canvas.height * 0.78, 18);
+    center("SPACE SHOOTER",canvas.height*0.35,40);
+    center("START",canvas.height*0.5);
+    center("SETTINGS",canvas.height*0.65);
+    center("RECORD: "+record,canvas.height*0.8,18);
     return;
   }
 
   if (state === SETTINGS) {
-    center("SETTINGS", canvas.height * 0.35, 32);
-    center("BACK", canvas.height * 0.82, 20);
+    center("SETTINGS",canvas.height*0.25,36);
+    center("Music -",canvas.height*0.38);
+    center("Music +",canvas.height*0.45);
+    center("SFX -",canvas.height*0.52);
+    center("SFX +",canvas.height*0.59);
+    center("Change Music",canvas.height*0.66);
+    center("BACK",canvas.height*0.82);
     return;
   }
 
+  if (state === PAUSE) {
+    center("PAUSED",canvas.height*0.45,40);
+    center("TAP TO RESUME",canvas.height*0.55,18);
+    return;
+  }
+
+  if (state === GAME) {
+    if (touchX!==null) player.x+=(touchX-player.x-player.w/2)*0.15;
+    player.x=Math.max(0,Math.min(canvas.width-player.w,player.x));
+
+    if (Date.now()-lastShot>650) { // 🔫 МЕДЛЕННЕЕ СТРЕЛЬБА
+      bullets.push({x:player.x+player.w/2-2,y:player.y});
+      laserSound.currentTime=0; laserSound.play();
+      lastShot=Date.now();
+    }
+
+    bullets.forEach(b=>b.y-=8);
+    bullets=bullets.filter(b=>b.y>-20);
+
+    if (Math.random()<0.02) enemies.push({x:Math.random()*(canvas.width-48),y:-50});
+    enemies.forEach(e=>e.y+=3);
+
+    for (let i=enemies.length-1;i>=0;i--){
+      const e=enemies[i];
+      if (e.y>canvas.height) return endGame();
+      if (player.x<e.x+48&&player.x+48>e.x&&player.y<e.y+48&&player.y+48>e.y) return endGame();
+      for (let j=bullets.length-1;j>=0;j--){
+        const b=bullets[j];
+        if (b.x>e.x&&b.x<e.x+48&&b.y>e.y&&b.y<e.y+48){
+          enemies.splice(i,1); bullets.splice(j,1); score++; break;
+        }
+      }
+    }
+
+    ctx.drawImage(playerImg,player.x,player.y,48,48);
+    bullets.forEach(b=>ctx.fillRect(b.x,b.y,4,10));
+    enemies.forEach(e=>ctx.drawImage(enemyImg,e.x,e.y,48,48));
+
+    ctx.font="16px sans-serif"; ctx.textAlign="left";
+    ctx.fillText("Score: "+score,12,22);
+    ctx.fillText("Record: "+record,12,40);
+
+    ctx.textAlign="right";
+    ctx.fillText("⏸",canvas.width-16,30);
+  }
+
   if (state === GAME_OVER) {
-    center("GAME OVER", canvas.height * 0.45, 40);
-    center("TAP TO MENU", canvas.height * 0.55, 18);
+    center("GAME OVER",canvas.height*0.45,40);
+    center("TAP TO MENU",canvas.height*0.55,18);
   }
 }
 
+function endGame(){
+  musicList[musicIndex].pause();
+  if (score>record){
+    record=score;
+    localStorage.setItem("record",record);
+    recordSound.currentTime=0; recordSound.play();
+  } else {
+    gameOverSound.currentTime=0; gameOverSound.play();
+  }
+  state=GAME_OVER;
+}
+
 // ===== LOOP =====
-(function loop() {
+(function loop(){
   update();
   requestAnimationFrame(loop);
 })();
 </script>
 </body>
 </html>
+
+</body>
+</html>
+
