--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@ canvas {
 <canvas id="game"></canvas>
 
 <script>
-// ===================================================================
-// ========================= ТВОЙ КОД (НЕ ТРОНУТ) =====================
-// ===================================================================
-
 // ===== CANVAS =====
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
@@ -75,10 +71,6 @@ const SETTINGS = 1;
 const GAME = 2;
 const PAUSE = 3;
 const GAME_OVER = 4;
-
-/* === ДОБАВЛЕНО === */
-const SHOP = 5;
-
 let state = MENU;
 
 // ===== ASSETS =====
@@ -123,9 +115,6 @@ function unlockAudio() {
 // ===== STORAGE =====
 let record = Number(localStorage.getItem("record")) || 0;
 
-/* === ДОБАВЛЕНО === */
-let coins = Number(localStorage.getItem("coins")) || 0;
-
 // ===== PLAYER =====
 const player = { x:0, y:0, w:48, h:48 };
 
@@ -141,21 +130,6 @@ const stars = Array.from({ length: 300 }, () => ({
   y: Math.random(),
   s: Math.random() * 2 + 1
 }));
-
-// ===================================================================
-// ============================ SHOP SYSTEM ===========================
-// ===================================================================
-
-const skins = [
-  { id:1, name:"Rare",      price:100,  color:"#4da6ff" },
-  { id:2, name:"Epic",      price:200,  color:"#b84dff" },
-  { id:3, name:"Mythical",  price:300,  color:"#ff4d4d" },
-  { id:4, name:"Legendary", price:500,  color:"#ffd700" },
-  { id:5, name:"X",         price:1000, color:"#ffffff" }
-];
-
-let ownedSkins = JSON.parse(localStorage.getItem("ownedSkins")) || [];
-let selectedSkin = Number(localStorage.getItem("selectedSkin")) || 0;
 
 // ===== INPUT =====
 let touchX = null;
@@ -176,29 +150,19 @@ canvas.addEventListener("touchstart", e => {
   if (state === MENU) {
     if (y > canvas.height*0.45 && y < canvas.height*0.55) startGame();
     else if (y > canvas.height*0.6 && y < canvas.height*0.7) state = SETTINGS;
-    else if (y > canvas.height*0.72 && y < canvas.height*0.8) state = SHOP;
   }
-
-  else if (state === SHOP) {
-    skins.forEach((s,i)=>{
-      const sy = canvas.height*0.32 + i*55;
-      if (y > sy-20 && y < sy+20) {
-        if (!ownedSkins.includes(s.id) && coins >= s.price) {
-          coins -= s.price;
-          ownedSkins.push(s.id);
-          localStorage.setItem("coins", coins);
-          localStorage.setItem("ownedSkins", JSON.stringify(ownedSkins));
-        } else if (ownedSkins.includes(s.id)) {
-          selectedSkin = s.id;
-          localStorage.setItem("selectedSkin", selectedSkin);
-        }
-      }
-    });
-    if (y > canvas.height*0.88) state = MENU;
-  }
-
   else if (state === SETTINGS) {
-    if (y > canvas.height*0.78) state = MENU;
+    if (y > canvas.height*0.35 && y < canvas.height*0.42) musicVolume=Math.max(0,musicVolume-0.1);
+    else if (y > canvas.height*0.42 && y < canvas.height*0.49) musicVolume=Math.min(1,musicVolume+0.1);
+    else if (y > canvas.height*0.49 && y < canvas.height*0.56) sfxVolume=Math.max(0,sfxVolume-0.1);
+    else if (y > canvas.height*0.56 && y < canvas.height*0.63) sfxVolume=Math.min(1,sfxVolume+0.1);
+    else if (y > canvas.height*0.63 && y < canvas.height*0.7) {
+      musicList.forEach(m=>m.pause());
+      musicIndex=(musicIndex+1)%musicList.length;
+      musicList[musicIndex].play();
+    }
+    else if (y > canvas.height*0.78) state = MENU;
+    updateVolumes();
   }
   else if (state === PAUSE) {
     state = GAME;
@@ -228,7 +192,7 @@ function startGame() {
 function drawStars() {
   ctx.fillStyle="white";
   for (let s of stars) {
-    s.y += s.s / 600;
+    s.y += s.s / 600; // ⭐ МЕДЛЕННЕЕ ФОН
     if (s.y > 1) s.y = 0;
     ctx.fillRect(s.x*canvas.width, s.y*canvas.height, s.s, s.s);
   }
@@ -248,26 +212,25 @@ function update() {
   if (state === MENU) {
     center("SPACE SHOOTER",canvas.height*0.35,40);
     center("START",canvas.height*0.5);
-    center("SETTINGS",canvas.height*0.6);
-    center("SHOP",canvas.height*0.72);
-    center("COINS: "+coins,canvas.height*0.8,18);
+    center("SETTINGS",canvas.height*0.65);
+    center("RECORD: "+record,canvas.height*0.8,18);
     return;
   }
 
-  if (state === SHOP) {
-    center("SHOP",canvas.height*0.18,36);
-    center("COINS: "+coins,canvas.height*0.23,18);
+  if (state === SETTINGS) {
+    center("SETTINGS",canvas.height*0.25,36);
+    center("Music -",canvas.height*0.38);
+    center("Music +",canvas.height*0.45);
+    center("SFX -",canvas.height*0.52);
+    center("SFX +",canvas.height*0.59);
+    center("Change Music",canvas.height*0.66);
+    center("BACK",canvas.height*0.82);
+    return;
+  }
 
-    skins.forEach((s,i)=>{
-      const y = canvas.height*0.32 + i*55;
-      ctx.fillStyle = s.color;
-      let label = `${s.name} - ${s.price}`;
-      if (ownedSkins.includes(s.id)) label = s.name + " (OWNED)";
-      if (selectedSkin === s.id) label = s.name + " (EQUIPPED)";
-      ctx.fillText(label, canvas.width/2, y);
-    });
-
-    center("BACK",canvas.height*0.9,18);
+  if (state === PAUSE) {
+    center("PAUSED",canvas.height*0.45,40);
+    center("TAP TO RESUME",canvas.height*0.55,18);
     return;
   }
 
@@ -275,7 +238,7 @@ function update() {
     if (touchX!==null) player.x+=(touchX-player.x-player.w/2)*0.15;
     player.x=Math.max(0,Math.min(canvas.width-player.w,player.x));
 
-    if (Date.now()-lastShot>650) {
+    if (Date.now()-lastShot>650) { // 🔫 МЕДЛЕННЕЕ СТРЕЛЬБА
       bullets.push({x:player.x+player.w/2-2,y:player.y});
       laserSound.currentTime=0; laserSound.play();
       lastShot=Date.now();
@@ -289,24 +252,47 @@ function update() {
 
     for (let i=enemies.length-1;i>=0;i--){
       const e=enemies[i];
+      if (e.y>canvas.height) return endGame();
+      if (player.x<e.x+48&&player.x+48>e.x&&player.y<e.y+48&&player.y+48>e.y) return endGame();
       for (let j=bullets.length-1;j>=0;j--){
         const b=bullets[j];
         if (b.x>e.x&&b.x<e.x+48&&b.y>e.y&&b.y<e.y+48){
-          enemies.splice(i,1);
-          bullets.splice(j,1);
-          score++;
-          coins++;
-          localStorage.setItem("coins", coins);
-          break;
+          enemies.splice(i,1); bullets.splice(j,1); score++; break;
         }
       }
     }
 
+    ctx.drawImage(playerImg,player.x,player.y,48,48);
+    bullets.forEach(b=>ctx.fillRect(b.x,b.y,4,10));
+    enemies.forEach(e=>ctx.drawImage(enemyImg,e.x,e.y,48,48));
+
+    ctx.font="16px sans-serif"; ctx.textAlign="left";
     ctx.fillText("Score: "+score,12,22);
-    ctx.fillText("Coins: "+coins,12,40);
+    ctx.fillText("Record: "+record,12,40);
+
+    ctx.textAlign="right";
+    ctx.fillText("⏸",canvas.width-16,30);
+  }
+
+  if (state === GAME_OVER) {
+    center("GAME OVER",canvas.height*0.45,40);
+    center("TAP TO MENU",canvas.height*0.55,18);
   }
 }
 
+function endGame(){
+  musicList[musicIndex].pause();
+  if (score>record){
+    record=score;
+    localStorage.setItem("record",record);
+    recordSound.currentTime=0; recordSound.play();
+  } else {
+    gameOverSound.currentTime=0; gameOverSound.play();
+  }
+  state=GAME_OVER;
+}
+
+// ===== LOOP =====
 (function loop(){
   update();
   requestAnimationFrame(loop);
@@ -315,3 +301,5 @@ function update() {
 </body>
 </html>
 
+</body>
+</html>
