--- a/index.html
+++ b/index.html
@@ -122,19 +122,7 @@ const stars = Array.from({ length: 300 }, () => ({
   s: Math.random() * 2 + 1
 }));
 
-// ===== COINS TRACKER (БЕЗ ВМЕШАТЕЛЬСТВА) =====
-let lastScoreObserved = 0;
-function trackCoins(){
-  if (state === GAME && score > lastScoreObserved) {
-    coins += score - lastScoreObserved;
-    localStorage.setItem("coins", coins);
-    lastScoreObserved = score;
-  }
-  requestAnimationFrame(trackCoins);
-}
-trackCoins();
-
-// ===== SKINS =====
+// ===== SKINS (SHOP) =====
 const skins = [
   {id:0,name:"Rare",cost:100,color:"blue"},
   {id:1,name:"Epic",cost:200,color:"purple"},
@@ -142,43 +130,131 @@ const skins = [
   {id:3,name:"Legendary",cost:400,color:"yellow"},
   {id:4,name:"X",cost:1000,color:"white"}
 ];
-let ownedSkins = JSON.parse(localStorage.getItem("ownedSkins")||"[0]");
+let ownedSkins = JSON.parse(localStorage.getItem("ownedSkins")||"[0]"); // default own skin 0
 let activeSkin = Number(localStorage.getItem("activeSkin")||0);
+
+// ===== AUDIO UNLOCK (для iOS/мобильных) =====
+let audioUnlocked = false;
+function unlockAudioAndMaybePlayMenu() {
+  if (audioUnlocked) return;
+  audioUnlocked = true;
+  // Попытка "пробного" прогрева аудио
+  [...musicList, laserSound, gameOverSound, recordSound].forEach(a=>{
+    a.play().then(()=>a.pause()).catch(()=>{});
+    a.currentTime = 0;
+  });
+  // если в меню, попытаться запустить музыку
+  try {
+    if (state === MENU) {
+      musicList.forEach(m => m.pause());
+      musicList[musicIndex].currentTime = 0;
+      musicList[musicIndex].play().catch(()=>{});
+    }
+  } catch(e){}
+}
 
 // ===== INPUT =====
 let touchX = null;
 
 canvas.addEventListener("touchstart", e => {
+  unlockAudioAndMaybePlayMenu();
+
   const r = canvas.getBoundingClientRect();
   const x = e.touches[0].clientX - r.left;
   const y = e.touches[0].clientY - r.top;
   touchX = x;
 
+  // pause button top-right during GAME (small area)
+  if (state === GAME) {
+    if (x > canvas.width - 50 && y < 50) {
+      state = PAUSE;
+      try { musicList[musicIndex].pause(); } catch(e){}
+      return;
+    }
+  }
+
   if (state === MENU) {
-    if (y > canvas.height*0.45 && y < canvas.height*0.55) startGame();
-    else if (y > canvas.height*0.58 && y < canvas.height*0.66) state = SETTINGS;
-    else if (y > canvas.height*0.70 && y < canvas.height*0.78) state = SHOP;
+    // START
+    if (y > canvas.height*0.45 && y < canvas.height*0.55) {
+      startGame();
+      return;
+    }
+    // SETTINGS
+    if (y > canvas.height*0.58 && y < canvas.height*0.66) {
+      state = SETTINGS;
+      return;
+    }
+    // SHOP
+    if (y > canvas.height*0.70 && y < canvas.height*0.78) {
+      state = SHOP;
+      return;
+    }
+  }
+
+  if (state === SETTINGS) {
+    // меню настроек: те же зоны как раньше (упрощённо)
+    if (y > canvas.height*0.35 && y < canvas.height*0.42) musicVolume = Math.max(0, musicVolume - 0.1);
+    else if (y > canvas.height*0.42 && y < canvas.height*0.49) musicVolume = Math.min(1, musicVolume + 0.1);
+    else if (y > canvas.height*0.49 && y < canvas.height*0.56) sfxVolume = Math.max(0, sfxVolume - 0.1);
+    else if (y > canvas.height*0.56 && y < canvas.height*0.63) sfxVolume = Math.min(1, sfxVolume + 0.1);
+    else if (y > canvas.height*0.63 && y < canvas.height*0.7) {
+      // change music
+      musicList.forEach(m => m.pause());
+      musicIndex = (musicIndex + 1) % musicList.length;
+      try { musicList[musicIndex].play(); } catch(e){}
+    }
+    else if (y > canvas.height*0.78) {
+      state = MENU;
+      try { musicList[musicIndex].play(); } catch(e){}
+    }
+    updateVolumes();
+    return;
   }
 
   if (state === SHOP) {
-    skins.forEach((s,i)=>{
+    // клики по скинам
+    skins.forEach((s, i) => {
       const sy = canvas.height*0.3 + i*45;
-      if (y > sy-18 && y < sy+18) {
-        if (!ownedSkins.includes(s.id) && coins >= s.cost) {
-          coins -= s.cost;
-          ownedSkins.push(s.id);
-          localStorage.setItem("coins",coins);
-          localStorage.setItem("ownedSkins",JSON.stringify(ownedSkins));
-        }
-        if (ownedSkins.includes(s.id)) {
+      if (y > sy - 18 && y < sy + 18) {
+        if (!ownedSkins.includes(s.id)) {
+          if (coins >= s.cost) {
+            coins -= s.cost;
+            ownedSkins.push(s.id);
+            localStorage.setItem("coins", coins);
+            localStorage.setItem("ownedSkins", JSON.stringify(ownedSkins));
+          }
+        } else {
           activeSkin = s.id;
-          localStorage.setItem("activeSkin",activeSkin);
+          localStorage.setItem("activeSkin", activeSkin);
         }
       }
     });
-    if (y > canvas.height*0.85) state = MENU;
+    // back
+    if (y > canvas.height*0.85) {
+      state = MENU;
+      try { musicList[musicIndex].play(); } catch(e){}
+    }
+    return;
+  }
+
+  if (state === PAUSE) {
+    state = GAME;
+    try { musicList[musicIndex].play(); } catch(e){}
+    return;
+  }
+
+  if (state === GAME_OVER) {
+    state = MENU;
+    try { musicList[musicIndex].play(); } catch(e){}
+    return;
   }
 });
+
+canvas.addEventListener("touchmove", e => {
+  const r = canvas.getBoundingClientRect();
+  touchX = e.touches[0].clientX - r.left;
+});
+canvas.addEventListener("touchend", ()=>touchX=null);
 
 // ===== START GAME =====
 function startGame() {
@@ -186,13 +262,19 @@ function startGame() {
   player.y = canvas.height - player.h - 20;
   bullets=[]; enemies=[]; score=0; lastShot=0;
   state = GAME;
+  // play game music
+  try {
+    musicList.forEach(m => m.pause());
+    musicList[musicIndex].currentTime = 0;
+    musicList[musicIndex].play();
+  } catch(e){}
 }
 
-// ===== DRAW =====
+// ===== DRAW HELPERS =====
 function drawStars() {
   ctx.fillStyle="white";
   for (let s of stars) {
-    s.y += s.s / 600;
+    s.y += s.s / 600; // slower background
     if (s.y > 1) s.y = 0;
     ctx.fillRect(s.x*canvas.width, s.y*canvas.height, s.s, s.s);
   }
@@ -205,11 +287,12 @@ function center(t,y,s=24){
   ctx.fillText(t,canvas.width/2,y);
 }
 
-// ===== UPDATE =====
+// ===== UPDATE (game loop) =====
 function update() {
   ctx.clearRect(0,0,canvas.width,canvas.height);
   drawStars();
 
+  // MENU
   if (state === MENU) {
     center("SPACE SHOOTER",canvas.height*0.32,40);
     center("START",canvas.height*0.48);
@@ -219,29 +302,192 @@ function update() {
     return;
   }
 
+  // SETTINGS
+  if (state === SETTINGS) {
+    center("SETTINGS",canvas.height*0.25,36);
+    center("Music -",canvas.height*0.38);
+    center("Music +",canvas.height*0.45);
+    center("SFX -",canvas.height*0.52);
+    center("SFX +",canvas.height*0.59);
+    center("Change Music",canvas.height*0.66);
+    center("BACK",canvas.height*0.82);
+    return;
+  }
+
+  // SHOP
   if (state === SHOP) {
     center("SHOP",canvas.height*0.18,36);
     center("COINS: "+coins,canvas.height*0.22,18);
     skins.forEach((s,i)=>{
-      ctx.fillStyle=s.color;
-      center(
-        `${s.name} ${ownedSkins.includes(s.id)?"✓":s.cost}`,
-        canvas.height*0.3 + i*45,
-        18
-      );
+      const y = canvas.height*0.3 + i*45;
+      ctx.fillStyle = s.color;
+      ctx.font = "18px sans-serif";
+      ctx.textAlign = "center";
+      const label = ownedSkins.includes(s.id) ? `${s.name} (OWNED)` : `${s.name} - ${s.cost}`;
+      ctx.fillText(label + (activeSkin===s.id ? "  ✓" : ""), canvas.width/2, y);
     });
     ctx.fillStyle="white";
-    center("BACK",canvas.height*0.9,18);
+    center("TAP A SKIN TO BUY/SELECT", canvas.height*0.78, 14);
+    center("BACK",canvas.height*0.92,18);
     return;
   }
 
-  // --- остальная игра не тронута ---
+  // PAUSE
+  if (state === PAUSE) {
+    center("PAUSED",canvas.height*0.45,40);
+    center("TAP TO RESUME",canvas.height*0.55,18);
+    return;
+  }
+
+  // GAME
+  if (state === GAME) {
+    // move player toward touchX
+    if (touchX!==null) player.x += (touchX - player.x - player.w/2) * 0.15;
+    player.x = Math.max(0, Math.min(canvas.width - player.w, player.x));
+
+    // shooting (slower)
+    if (Date.now() - lastShot > 650) {
+      bullets.push({ x: player.x + player.w/2 - 2, y: player.y });
+      try { laserSound.currentTime = 0; laserSound.play(); } catch(e){}
+      lastShot = Date.now();
+    }
+
+    // bullets move
+    bullets.forEach(b => b.y -= 8);
+    bullets = bullets.filter(b => b.y > -20);
+
+    // spawn enemies
+    if (Math.random() < 0.02) enemies.push({ x: Math.random() * (canvas.width - 48), y: -50 });
+    enemies.forEach(e => e.y += 3);
+
+    // collisions & logic
+    for (let i = enemies.length - 1; i >= 0; i--) {
+      const e = enemies[i];
+
+      // lose if enemy reached bottom
+      if (e.y > canvas.height) {
+        endGame();
+        return;
+      }
+
+      // collision with player
+      if (
+        player.x < e.x + 48 &&
+        player.x + player.w > e.x &&
+        player.y < e.y + 48 &&
+        player.y + player.h > e.y
+      ) {
+        endGame();
+        return;
+      }
+
+      // bullets hit enemy
+      for (let j = bullets.length - 1; j >= 0; j--) {
+        const b = bullets[j];
+        if (b.x > e.x && b.x < e.x + 48 && b.y > e.y && b.y < e.y + 48) {
+          enemies.splice(i, 1);
+          bullets.splice(j, 1);
+          score++;
+          // монеты: каждое попадание = 1 монета
+          coins++;
+          localStorage.setItem("coins", coins);
+          break;
+        }
+      }
+    }
+
+    // draw player with skin visual (colored border)
+    // draw border circle to indicate active skin color
+    const skinColor = skins.find(s=>s.id===activeSkin)?.color || "white";
+    ctx.save();
+    // border
+    ctx.beginPath();
+    ctx.strokeStyle = skinColor;
+    ctx.lineWidth = 3;
+    ctx.rect(player.x-2, player.y-2, player.w+4, player.h+4);
+    ctx.stroke();
+    ctx.closePath();
+    ctx.restore();
+
+    // draw player image
+    try { ctx.drawImage(playerImg, player.x, player.y, player.w, player.h); } catch(e){
+      // if image missing, draw placeholder
+      ctx.fillStyle = skinColor;
+      ctx.fillRect(player.x, player.y, player.w, player.h);
+    }
+
+    // draw bullets and enemies
+    bullets.forEach(b => ctx.fillRect(b.x, b.y, 4, 10));
+    enemies.forEach(e => {
+      try { ctx.drawImage(enemyImg, e.x, e.y, 48, 48); } catch(e){
+        ctx.fillStyle = "red";
+        ctx.fillRect(e.x, e.y, 48, 48);
+      }
+    });
+
+    // HUD: score and record and coins
+    ctx.font = "16px sans-serif"; ctx.textAlign = "left";
+    ctx.fillStyle = "white";
+    ctx.fillText("Score: " + score, 12, 22);
+    ctx.fillText("Record: " + record, 12, 40);
+    ctx.fillText("Coins: " + coins, 12, 58);
+
+    // pause icon (top-right)
+    ctx.textAlign = "right";
+    ctx.fillText("⏸", canvas.width - 16, 30);
+    return;
+  }
+
+  // GAME OVER
+  if (state === GAME_OVER) {
+    center("GAME OVER", canvas.height*0.45, 40);
+    center("TAP TO MENU", canvas.height*0.55, 18);
+    return;
+  }
 }
 
+// ===== endGame =====
+function endGame(){
+  try { musicList[musicIndex].pause(); } catch(e){}
+  if (score > record) {
+    record = score;
+    localStorage.setItem("record", record);
+    try { recordSound.currentTime = 0; recordSound.play(); } catch(e){}
+  } else {
+    try { gameOverSound.currentTime = 0; gameOverSound.play(); } catch(e){}
+  }
+  state = GAME_OVER;
+}
+
+// ===== LOOP =====
 (function loop(){
   update();
   requestAnimationFrame(loop);
 })();
+
+// small helper: ensure menu music plays when returning to MENU
+// watch state transitions and play menu music after first touch
+(function ensureMenuMusic(){
+  // If in MENU and audio unlocked then ensure music playing
+  if (state === MENU && audioUnlocked) {
+    try {
+      if (musicList[musicIndex].paused) {
+        musicList.forEach(m=>m.pause());
+        musicList[musicIndex].currentTime = 0;
+        musicList[musicIndex].play().catch(()=>{});
+      }
+    } catch(e){}
+  }
+  requestAnimationFrame(ensureMenuMusic);
+})();
+
+// extra: expose some functions to console for debug
+window.__gameDebug = {
+  coins: ()=>coins,
+  addCoins: (n=1)=>{ coins+=n; localStorage.setItem("coins",coins); },
+  setState: s => { state = s; }
+};
+
 </script>
 </body>
 </html>
